2003-11-13 Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* GenericOutputter.cs : Added HTML output support. Closer xmlns handling
	  to Xalan tests and MS.NET implementation (only for test convenience).
	* XslOutput.cs : Indent holds string rathen than bool. Its default value
	  varies in the context. When method="html", then default is "yes".
	* XslTransformProcessor.cs : Extension element prefixes should not 
	  be written as stylesheet namespaces.
	* XsltCompiledContext.cs : Return type of generate-id() is string.
	  Implemented unparsed-entity-uri().

2003-11-02 Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* Compiler.cs : More complete attribute set gathering.
	  GetNamespacesToCopy() should only return Local namespaces.
	* GenericOutputter.cs : Added support for indentation.
	  Added easy hack for html output.
	  More correct Prefix handling (considers already defined ones).
	  Namespace emmission is moved to CheckState().
	* Emitter.cs, XmlWriterEmitter.cs, GenericOutputter.cs, Outputter.cs :
	  Added WriteFullEndElement(). (i.e. IsEmptyElement support)
	* GenericOutputter.cs, Outputter.cs :
	  Added CanProcessAttributes property for 
	  use-attribute-sets of xsl:copy.
	* XslStylesheet.cs : Added support for stylesheet-defined xmlns decls.
	  Added support for exclude-result-prefixes.
	* XslTransformProcessor.cs : Added support for stylesheet-defined xmlns.

2003-10-30 Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* Compiler.cs : It is not important, but attribute order became closer
	  to MS.NET and Xalan (assuming from OASIS tests).

2003-10-30 Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* GenericOutputter.cs : Attribute wasn't overwritten its properties
	  because Attribute is struct it was let to another local variable.

2003-09-28 Ben Maurer  <bmaurer@users.sourceforge.net>

	* GenericOutputter.cs: make html output a warning, because doing
	xml will be right most of the time.

2003-09-28 Ben Maurer  <bmaurer@users.sourceforge.net>
